2008-06-10  Christian Persch  <chpe@gnome.org>

	* gtk/gtktreeview.c: (gtk_tree_view_button_release_drag_column),
	(dest_row_free), (set_dest_row), (ensure_info),
	(gtk_tree_view_remove), (gtk_tree_view_put),
	(gtk_tree_view_set_column_drag_info): Use GSlice. Patch from
	bug #506853.

2008-06-10  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtkfilechooser.c (gtk_file_chooser_set_current_folder_uri)
	use g_file_new_for_uri.

2008-06-10  Paolo Borelli  <pborelli@katamail.com>

	* gtk/gtkfilesystem.c (gtk_file_system_volume_render_icon): do not
	leak the GIcon.

2008-06-10  Carlos Garnacho  <carlos@imendio.com>

	* configure.in:
	* gtk/Makefile.am:
	* gtk/xdgmime: removed local xdgmime copy as Matthias suggested in bug
	#520874, comment #8. It's no longer used directly by GTK+.

2008-06-10  Carlos Garnacho  <carlos@imendio.com>

	Bug 520874 - Should use gio directly.

	* gtk/gtkfilesystem.[ch]: Turn into a private object, which mostly
	provides helper functions for asynchronous calls, folder abstraction
	and uniform handling of volumes/drives/mounts.

	* gtk/gtkfilesystemwin32.[ch]:
	* gtk/gtkfilesystemunix.[ch]: Removed, these are no longer required.

	* gtk/gtkfilechooser.c:
	* gtk/gtkfilechooserbutton.c:
	* gtk/gtkfilechooserdefault.c:
	* gtk/gtkfilechooserentry.[ch]:
	* gtk/gtkfilechooserprivate.h:
	* gtk/gtkfilechooserutils.c:
	* gtk/gtkfilesystemmodel.[ch]:
	* gtk/gtkpathbar.[ch]: Use GIO internally. Adapt to GtkFileSystem API.
	Do not load filesystem implementation modules.

	* gtk/Makefile.am:
	* gtk/gtk.symbols: the gtkfilesystem.h private header isn't installed
	anymore, nor the unix/win32 implementations.

	* README.in: Add blurb about these changes.

2008-06-09  Kristian Rietveld  <kris@gtk.org>

	Bug 526987 - GtkCellRendererCombo should allow model to be NULL

	* gtk/gtkcellrenderercombo.c (gtk_cell_renderer_combo_class_init),
	(gtk_cell_renderer_combo_set_property),
	(gtk_cell_renderer_combo_editing_done),